# 068-fine-tuning-llm-finance

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  backtest.py  data_loader.py  evaluate.py  model.py  requirements.txt  signals.py  trainer.py
python/examples/: 01_sentiment_finetuning.py  02_crypto_analysis.py  03_backtest.py  __init__.py
rust/: Cargo.toml
rust/src/: backtest.rs  data_loader.rs  evaluate.rs  lib.rs  model.rs  signals.rs  trainer.rs
